--- a/src/scss/layout/_preview.scss
+++ b/src/scss/layout/_preview.scss
@@ -65,4 +65,5 @@
   height: 42px;
   background-color: #438792;
   position: absolute;
+  transform: translateY(21px);
 }
